--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,19 +10,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: set up JDK 17
+    
+    - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew || true
-
+    
+    # Ye step sabse important hai - Hum wrapper use nahi kar rahe
     - name: Build with Gradle
-      run: gradle assembleDebug --no-daemon
-
+      run: gradle assembleDebug --no-daemon --stacktrace
+      
     - name: Upload APK
       uses: actions/upload-artifact@v3
       with:
