--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,20 +9,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
     
-    # Ye step sabse important hai - Hum wrapper use nahi kar rahe
+    # Hum abhi bhi GitHub ka Gradle use karenge taake data bache
     - name: Build with Gradle
       run: gradle assembleDebug --no-daemon --stacktrace
       
     - name: Upload APK
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: Jarvis-APK
         path: app/build/outputs/apk/debug/app-debug.apk
