--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 plugins {
     id 'com.android.application'
-    id 'kotlin-android'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
     namespace 'com.romeo.jarvis'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.romeo.jarvis"
-        minSdk 26  // Android 8.0+ (Background services ke liye best)
-        targetSdk 33
+        minSdk 26
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -24,37 +24,36 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
-        viewBinding true // UI elements ko easily access karne ke liye
+        viewBinding true
     }
 }
 
 dependencies {
-    // 1. Core Android Libraries
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-
-    // 2. Lottie Animations (Wo Robot/Orb wali high-tech feel ke liye)
+    
+    // Lottie Animation
     implementation 'com.airbnb.android:lottie:6.0.0'
 
-    // 3. Networking (Backend se baat karne ke liye)
+    // Retrofit & Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' // JSON samajhne ke liye
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
 
-    // 4. Coroutines (Background tasks bina phone hang kiye)
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
 
-    // 5. Lifecycle (App kill hone par bhi service zinda rakhne ke liye help karega)
+    // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.lifecycle:lifecycle-service:2.6.1'
 }
