--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -17,9 +17,14 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
     
-    # Hum abhi bhi GitHub ka Gradle use karenge taake data bache
+    # YE HAI MAGIC FIX - Hum server ko bol rahe hain Gradle 8.2 use karo
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: '8.2'
+        
     - name: Build with Gradle
-      run: gradle assembleDebug --no-daemon --stacktrace
+      run: gradle assembleDebug --no-daemon --stacktrace --warning-mode all
       
     - name: Upload APK
       uses: actions/upload-artifact@v4
