--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,51 +3,85 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.romeo.jarvis">
 
+    <!-- ================= CORE PERMISSIONS ================= -->
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
+    <!-- Foreground + background listening -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE_MICROPHONE" />
+
+    <!-- Lock screen + overlay -->
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <!-- App & system control -->
     <uses-permission android:name="android.permission.QUERY_ALL_PACKAGES" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- File control (offline tasks) -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" tools:ignore="ScopedStorage" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:maxSdkVersion="28" />
+    <uses-permission
+        android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
+
+    <!-- Termux / command execution (advanced use) -->
     <uses-permission android:name="com.termux.permission.RUN_COMMAND" />
 
+    <!-- ================= APPLICATION ================= -->
+
     <application
+        android:name=".JarvisApp"
         android:allowBackup="true"
         android:icon="@drawable/app_icon"
         android:label="Jarvis AI"
         android:roundIcon="@drawable/app_icon"
-        android:theme="@style/Theme.Jarvis.NoActionBar">
+        android:theme="@style/Theme.Jarvis.NoActionBar"
+        android:usesCleartextTraffic="true">
+
+        <!-- ================= MAIN ACTIVITY ================= -->
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:showOnLockScreen="true"
-            android:turnScreenOn="true">
+            android:turnScreenOn="true"
+            android:launchMode="singleTask"
+            android:excludeFromRecents="false">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <!-- ================= JARVIS FOREGROUND SERVICE ================= -->
+
         <service
             android:name=".services.JarvisService"
-            android:exported="true"
-            android:foregroundServiceType="microphone" />
+            android:exported="false"
+            android:foregroundServiceType="microphone"
+            android:stopWithTask="false" />
+
+        <!-- ================= ACCESSIBILITY SERVICE (CORE POWER) ================= -->
 
         <service
             android:name=".services.JarvisAccessibilityService"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE"
-            android:exported="true">
+            android:exported="false">
+
             <intent-filter>
                 <action android:name="android.accessibilityservice.AccessibilityService" />
             </intent-filter>
+
             <meta-data
                 android:name="android.accessibilityservice"
-                android:resource="@xml/accessibility_service_config" />
+                android:resource="@xml/jarvis_accessibility_config" />
         </service>
+
     </application>
 </manifest>
