--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,34 +1,40 @@
-name: Android CI
+name: Build Jarvis APK
 
 on:
   push:
     branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up JDK 17
-      uses: actions/setup-java@v4
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-    
-    # YE HAI MAGIC FIX - Hum server ko bol rahe hain Gradle 8.2 use karo
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v3
-      with:
-        gradle-version: '8.2'
-        
-    - name: Build with Gradle
-      run: gradle assembleDebug --no-daemon --stacktrace --warning-mode all
-      
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: Jarvis-APK
-        path: app/build/outputs/apk/debug/app-debug.apk
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          distribution: "temurin"
+          java-version: "17"
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x ./gradlew
+
+      - name: Cache Gradle
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*') }}
+
+      - name: Build Debug APK
+        run: ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: Jarvis-debug-apk
+          path: app/build/outputs/apk/debug/app-debug.apk
