--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    
+
     buildTypes {
         release { minifyEnabled false }
     }
@@ -31,9 +31,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
     // Networking (Backend se baat karne ke liye)
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'implementation("com.squareup.okhttp3:okhttp:4.9.3")
-implementation("com.squareup.okhttp3:logging-interceptor:4.9.3") // Optional, for debugging network requests'
+
+    // OkHttp for networking
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3" // Optional, for debugging network requests
 }
